# aoc2025

./: .gitignore  README.md  main.py  pyproject.toml
src/aoc/: linalg.py  matrix.py  ranges.py  utils.py
src/aoc/day1/: solution.py
src/aoc/day10/: solution.py
src/aoc/day11/: solution.py
src/aoc/day12/: solution.py
src/aoc/day2/: solution.py
src/aoc/day3/: solution.py
src/aoc/day4/: solution.py
src/aoc/day5/: solution.py
src/aoc/day6/: solution.py
src/aoc/day7/: solution.py
src/aoc/day8/: solution.py
src/aoc/day9/: solution.py
