[project]
name = "aoc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.8",
    "numpy>=2.3.5",
    "scipy>=1.16.3",
    "shapely>=2.1.2",
]

[dependency-groups]
dev = [
    "black>=25.12.0",
    "ruff>=0.14.9",
]
